--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=market
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/test_data_object
+spring.datasource.url=jdbc:mysql://localhost:3306/market?useSSL=false&serverTimezone=UTC
 spring.jpa.open-in-view=false
 spring.datasource.username=root
 spring.datasource.password=123123
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
