Po angielsku, dodane szyfrowanie oraz logowanie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=market
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/market?useSSL=false&serverTimezone=UTC
 spring.jpa.open-in-view=false
 spring.datasource.username=root
 spring.datasource.password=123123
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+encryption.salt.rounds=10
+
+jwt.algorithm.key=SuperTajnyKlucz
+jwt.issuer=Market
+jwt.expiryInSeconds=604800
